--- a/Demo.Module.Shell/packages.config
+++ b/Demo.Module.Shell/packages.config
@@ -6,4 +6,10 @@
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net461" />
   <package id="Prism.Mvvm" version="1.0.0" targetFramework="net461" />
   <package id="Prism.PubSubEvents" version="1.0.0" targetFramework="net461" />
+  <package id="System.Reactive" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net461" />
 </packages>
