--- a/Demo/App.config
+++ b/Demo/App.config
@@ -83,6 +83,18 @@
               </dependentAssembly>
   
 
+              <dependentAssembly>
+  
+
+                    <assemblyIdentity name="System.Reactive.Core" publicKeyToken="94bc3704cddfc263" culture="neutral" />
+  
+
+                    <bindingRedirect oldVersion="0.0.0.0-3.0.3000.0" newVersion="3.0.3000.0" />
+  
+
+              </dependentAssembly>
+  
+
         </assemblyBinding>
   
 
